--- a/public/index2.html
+++ b/public/index2.html
@@ -25,26 +25,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <style>
-   		ul {
-    		list-style-type: none; /* Убирает буллиты */
-   			}  			
-  	</style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+    <ul class="card-body-stars u-clearfix" style="list-style: none;">
+  <li {list-style-type: none}>
+    <svg fill="#D3BCA2" height="28" viewBox="0 0 18 18" width="28" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9 11.3l3.71 2.7-1.42-4.36L15 7h-4.55L9 2.5 7.55 7H3l3.71 2.64L5.29 14z"/>
+      <path d="M0 0h18v18H0z" fill="none"/>
+    </svg>
+    <svg fill="#D3BCA2" height="28" viewBox="0 0 18 18" width="28" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9 11.3l3.71 2.7-1.42-4.36L15 7h-4.55L9 2.5 7.55 7H3l3.71 2.64L5.29 14z"/>
+      <path d="M0 0h18v18H0z" fill="none"/>
+    </svg>    
     
-    <p>ДЗ: films</p>
-    -->
+  </li>
+</ul>
   </body>
 </html>
